@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+
+    <!-- full version -->
+    <participating-org xml:lang="en" ref="X" type="X" role="X">X</participating-org>
+
+    <!-- no-text version -->
+    <participating-org ref="X" type="X" role="X"/>
+
+    <!-- minimal version -->
+    <participating-org role="X">X</participating-org>
+
+  </iati-activity>
+</iati-activities>
